objects/pse__Project_Task_Points_Complete_History__c.object
<CustomObject>
    <customHelpPage>pse__ProjectTaskPointsCompleteHistoryHelp</customHelpPage>
    <description>Tracks changes made to the Points Complete field on project tasks. Project tasks have a master-detail relationship with project task points complete histories.</description>
    <fields>
        <fullName>pse__Change_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Change Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Change_in_Value__c</fullName>
        <inlineHelpText>The change in value from the last change.</inlineHelpText>
        <label>Change in Value</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__New_Value__c</fullName>
        <label>New Value</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Old_Value__c</fullName>
        <label>Old Value</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Project_Task__c</fullName>
        <label>Project Task</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Project Tasks Points Complete History</relationshipLabel>
        <relationshipName>Project_Tasks_Points_Complete_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Task Points Complete History</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PTSCOMP-{0000}</displayFormat>
        <label>Project Task Points Complete History Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Tasks Points Complete History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>